# Scratch-Everywhere-Builder

./: README.md  Scratch Everywhere Builder.slnx
Resources/: project.sb3
Scratch Everywhere Builder/: App.config  Builder.cs  Dialogs.cs  Main.Designer.cs  Main.cs  Main.resx  Program.cs  Resources.Designer.cs  Resources.resx  Scratch Everywhere Builder.csproj  Sebx.cs  Utils.cs  Version.cs
Scratch Everywhere Builder/0.29/: .clang-format  .editorconfig  CMakeLists.txt  Makefile  PORTING.md
Scratch Everywhere Builder/0.29/.github/: .editorconfig
Scratch Everywhere Builder/0.29/.github/workflows/: labeler.yml  nightly-gamecube.yml  nightly-psp.yml  nightly-vita.yml  nightly-wiiu.yml
Scratch Everywhere Builder/0.29/docker/: Dockerfile.linux  Dockerfile.switch
Scratch Everywhere Builder/0.29/make/: Makefile_3ds  Makefile_gamecube  Makefile_wii
Scratch Everywhere Builder/0.29/source/3ds/: image.cpp  image.hpp  keyboard.cpp
Scratch Everywhere Builder/0.29/source/headless/: keyboard.cpp  render.cpp
Scratch Everywhere Builder/0.29/source/nds/: keyboard.cpp
Scratch Everywhere Builder/0.29/source/scratch/: blockExecutor.cpp  blockExecutor.hpp  interpret.hpp  math.cpp  math.hpp  os.cpp  os.hpp  render.hpp  time.hpp  unzip.hpp  value.hpp
Scratch Everywhere Builder/0.29/source/scratch/blocks/: control.cpp  data.cpp  events.cpp  events.hpp  looks.cpp  operator.cpp  sensing.cpp
Scratch Everywhere Builder/0.29/source/scratch/menus/: mainMenu.hpp  unpackMenu.cpp  unpackMenu.hpp
Scratch Everywhere Builder/0.29/source/sdl/: image.cpp  image.hpp  input.cpp
Scratch Everywhere Builder/DownloadVersion/: DownloadVersion.Designer.cs  DownloadVersion.cs
Scratch Everywhere Builder/Included Version/0.29/: .clang-format-ignore  README.md
Scratch Everywhere Builder/Included Version/0.29/.github/workflows/: deploy-wasm.yml  nightly-switch.yml
Scratch Everywhere Builder/Included Version/0.29/docker/: Dockerfile.3ds  Dockerfile.psp  Dockerfile.wasm
Scratch Everywhere Builder/Included Version/0.29/gfx/vita/livearea/contents/: template.xml
Scratch Everywhere Builder/Included Version/0.29/include/: emscripten_browser_file.h
Scratch Everywhere Builder/Included Version/0.29/make/: Makefile_nds
Scratch Everywhere Builder/Included Version/0.29/source/3ds/: input.cpp  text_3ds.cpp  text_3ds.hpp
Scratch Everywhere Builder/Included Version/0.29/source/headless/: audio.cpp
Scratch Everywhere Builder/Included Version/0.29/source/nds/: image.hpp  text_nds.cpp
Scratch Everywhere Builder/Included Version/0.29/source/scratch/: audio.hpp  color.hpp  input.hpp
Scratch Everywhere Builder/Included Version/0.29/source/scratch/blocks/: looks.hpp  pen.cpp  procedure.cpp  sound.cpp
Scratch Everywhere Builder/Included Version/0.29/source/scratch/menus/: loading.cpp  loading.hpp  mainMenu.cpp  menuObjects.cpp  projectMenu.cpp  projectSettings.cpp  projectSettings.hpp  settingsMenu.hpp
Scratch Everywhere Builder/Included Version/0.29/source/sdl/: keyboard.cpp
Scratch Everywhere Builder/Included Version/0.29/source/sdl/audio/: audio.hpp
Scratch Everywhere Builder/NewProject/: NewProject.Designer.cs  NewProject.cs  NewProject.resx
Scratch Everywhere Builder/Properties/: Settings.Designer.cs  Settings.settings
Setup/: Setup.vdproj
included-version/: Included Version.csproj  Info.cs  generater.bat
included-version/0.29/: .clang-tidy  .dockerignore  .gitignore  CONTRIBUTING.md
included-version/0.29/.github/: labeler.yml
included-version/0.29/.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
included-version/0.29/.github/workflows/: nightly-3ds.yml  nightly-nds.yml  nightly-pc.yml  nightly-ps4.yml  nightly-wii.yml
included-version/0.29/docker/: Dockerfile.gamecube  Dockerfile.macos  Dockerfile.ps4  Dockerfile.vita  Dockerfile.wii  Dockerfile.wiiu  Dockerfile.windows
included-version/0.29/gfx/3ds/: makerom.rsf
included-version/0.29/gfx/menu/: splashText.txt
included-version/0.29/gfx/wasm/: shell.html
included-version/0.29/include/miniz/: miniz.c
included-version/0.29/make/: Makefile_ps4  Makefile_wasm  Makefile_wiiu
included-version/0.29/source/: main.cpp
included-version/0.29/source/3ds/: render.cpp
included-version/0.29/source/3ds/audio/: audio.cpp  audio.hpp
included-version/0.29/source/headless/: image.cpp  input.cpp  text_headless.cpp  text_headless.hpp
included-version/0.29/source/nds/: audio.cpp  audio.hpp  image.cpp  input.cpp  render.cpp  text_nds.hpp
included-version/0.29/source/scratch/: image.hpp  interpret.cpp  keyboard.hpp  sprite.hpp  text.cpp  text.hpp  time.cpp  unzip.cpp  value.cpp
included-version/0.29/source/scratch/blocks/: control.hpp  data.hpp  motion.cpp  motion.hpp  operator.hpp  pen.hpp  procedure.hpp  sensing.hpp  sound.hpp
included-version/0.29/source/scratch/menus/: controlsMenu.cpp  controlsMenu.hpp  menuObjects.hpp  projectMenu.hpp  settingsMenu.cpp
included-version/0.29/source/sdl/: render.cpp  render.hpp  text_sdl.cpp  text_sdl.hpp
included-version/0.29/source/sdl/audio/: audio.cpp
